[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duve3pygameutil"
description = "A library to provide me (Duve3) classes and stuff that I commonly use in pygame projects."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["pygame"]
authors = [
  { name = "Duve3", email = "Duv3tabest@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pygame"]
dynamic = ["version"]

[project.urls]
Issues = ""
Source = ""

[tool.hatch.version]
path = "duve3pygameutil/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pygame",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=duve3pygameutil --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "duve3pygameutil/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.publish.index]
disable = true
